Use link_to instead of html anchor element
So that we can avoid using ERB tags inside an html element attribute
value.

Co-authored-by: James Mead <3169+floehopper@users.noreply.github.com>

--- a/app/views/journey/_error_summary.html.erb
+++ b/app/views/journey/_error_summary.html.erb
@@ -7,7 +7,7 @@
       <ul class="govuk-list govuk-error-summary__list">
         <% errors.keys.each do |attribute| %>
           <li>
-            <a href="#<%= error_id(attribute) %>"><%= errors[attribute].first %></a>
+            <%= link_to errors[attribute].first, "##{error_id(attribute)}" %>
           </li>
         <% end %>
       </ul>
