--- a/app/views/journey/looking_for.html.erb
+++ b/app/views/journey/looking_for.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:page_title_prefix) do %>
+  <%= t('layouts.application.error_prefix') if @journey.errors.any? %>
+<% end %>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
