--- a/app/views/journey/value_band.html.erb
+++ b/app/views/journey/value_band.html.erb
@@ -1,3 +1,7 @@
+<% content_for(:page_title_prefix) do %>
+  <%= t('layouts.application.error_prefix') if @journey.errors.any? %>
+<% end %>
+
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <%= govuk_form_group_with_optional_error(@journey, :value_band) do %>
