--- a/app/views/facilities_management_suppliers/lot1b_suppliers.html.erb
+++ b/app/views/facilities_management_suppliers/lot1b_suppliers.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h2>Lot 1b suppliers</h2>
   <p>Total contract value &pound;7M - &pound;50M</p>
-  <p>34 suppliers</p>
+  <p><%= @suppliers.count %></p>
   <p>
     <a href="https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id=%22RM3830%3A1b%22" title="View suppliers">See a list of suppliers without pricing information</a>
   </p>
