--- a/app/views/facilities_management_suppliers/lot1c_suppliers.html.erb
+++ b/app/views/facilities_management_suppliers/lot1c_suppliers.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h2>Lot 1c suppliers</h2>
   <p>Total contract value &pound;50M+</p>
-  <p>20 suppliers</p>
+  <p><%= pluralize(@suppliers.count, 'supplier') %></p>
   <p>
     <a href="https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id=%22RM3830%3A1c%22" title="View suppliers">See a list of suppliers without pricing information</a>
   </p>
