--- a/app/views/facilities_management_suppliers/index.html.erb
+++ b/app/views/facilities_management_suppliers/index.html.erb
@@ -1,9 +1,11 @@
 <div>
-  <h2>Lot 1a suppliers</h2>
+  <h2>Lot <%= @lot %> suppliers</h2>
   <p>Total contract value up to &pound;7M</p>
   <p><%= pluralize(@suppliers.count, 'supplier') %></p>
   <p>
-    <a href="https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id=%22RM3830%3A1a%22" title="View suppliers">See a list of suppliers without pricing information</a>
+    <a href="<%= @url %>" title="View suppliers">See a list of suppliers without pricing information</a>
   </p>
+  <% if @lot == '1a' %>
   <p>Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.</p>
+  <% end %>
 </div>
