Make FM suppliers contract value range text dynamic
We lost the different contract value ranges when we combined the three
templates into one in this commit [1].

[1]: 822f93eee359fc3f7ade1515d70551714a1fab8d

--- a/app/views/facilities_management_suppliers/index.html.erb
+++ b/app/views/facilities_management_suppliers/index.html.erb
@@ -1,6 +1,6 @@
 <div>
   <h2>Lot <%= @lot %> suppliers</h2>
-  <p>Total contract value up to &pound;7M</p>
+  <p><%= contract_value_range_text(@lot) %></p>
   <p><%= pluralize(@suppliers.count, 'supplier') %></p>
   <% @suppliers.each do |supplier| %>
   <h2><%= supplier.name %></h2>
