Extract supplier partial template from FM suppliers index page
This will make it easier to test what is displayed for each supplier.

--- a/app/views/facilities_management_suppliers/index.html.erb
+++ b/app/views/facilities_management_suppliers/index.html.erb
@@ -2,14 +2,7 @@
   <h1>Lot <%= @lot %> suppliers</h1>
   <p><%= contract_value_range_text(@lot) %></p>
   <p><%= pluralize(@suppliers.count, 'supplier') %></p>
-  <% @suppliers.each do |supplier| %>
-    <h2><%= supplier.name %></h2>
-    <p>
-      <strong><%= supplier.contact_name %></strong><br />
-      <%= supplier.telephone_number %><br />
-      <%= mail_to(supplier.contact_email) %>
-    </p>
-  <% end %>
+  <%= render partial: 'supplier', collection: @suppliers %>
   <% if @lot == '1a' %>
     <p>Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.</p>
   <% end %>
