Display services offered by each supplier on FM supplier index page
Note that services are grouped by work package. This is very unlikely to
be the final layout/markup, because each supplier has *loads* of
services which makes the page virtually unusable. However, we can
iterate on this in subsequent commits.

--- a/app/views/facilities_management_suppliers/_supplier.html.erb
+++ b/app/views/facilities_management_suppliers/_supplier.html.erb
@@ -3,4 +3,17 @@
   <strong><%= supplier.contact_name %></strong><br />
   <%= supplier.telephone_number %><br />
   <%= mail_to(supplier.contact_email) %>
+
+  <ul>
+    <% supplier.services_by_work_package_in_lot(lot_number).each do |work_package, services| %>
+      <li>
+        <%= work_package.name %>
+        <ul>
+          <% services.each do |service| %>
+            <li><%= service.name %></li>
+          <% end %>
+        </ul>
+      </li>
+    <% end %>
+  </ul>
 </p>
