--- a/app/views/facilities_management_suppliers/index.html.erb
+++ b/app/views/facilities_management_suppliers/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Lot <%= @lot %> suppliers</h1>
   <p><%= contract_value_range_text(@lot) %></p>
   <p><%= pluralize(@suppliers.count, 'supplier') %></p>
-  <%= render partial: 'supplier', collection: @suppliers %>
+  <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot } %>
   <% if @lot == '1a' %>
     <p>Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.</p>
   <% end %>
