--- a/app/views/facilities_management_suppliers/index.html.erb
+++ b/app/views/facilities_management_suppliers/index.html.erb
@@ -1,9 +1,9 @@
 <div>
-  <h1>Lot <%= @lot %> suppliers</h1>
-  <p><%= contract_value_range_text(@lot) %></p>
+  <h1>Lot <%= @lot.number %> suppliers</h1>
+  <p><%= contract_value_range_text(@lot.number) %></p>
   <p><%= pluralize(@suppliers.count, 'supplier') %></p>
-  <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot } %>
-  <% if @lot == '1a' %>
+  <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
+  <% if @lot.number == '1a' %>
     <p>Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.</p>
   <% end %>
 </div>
