--- a/app/views/journey/supplier_region.html.erb
+++ b/app/views/journey/supplier_region.html.erb
@@ -3,8 +3,8 @@
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <%= hidden_field_tag :value_band, params[:value_band] %>
-  <%= govuk_form_group_with_optional_error(@journey, :looking_for) do %>
-    <%= govuk_fieldset_with_optional_error(@journey, :looking_for) do %>
+  <%= govuk_form_group_with_optional_error(@journey, :region_codes) do %>
+    <%= govuk_fieldset_with_optional_error(@journey, :region_codes) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
         <h1 class="govuk-fieldset__heading">
           <%= t('.question') %>
