--- a/app/views/facilities_management_suppliers/index.html.erb
+++ b/app/views/facilities_management_suppliers/index.html.erb
@@ -1,9 +1,12 @@
-<div>
-  <h1>Lot <%= @lot.number %> suppliers</h1>
-  <p><%= contract_value_range_text(@lot.number) %></p>
-  <p><%= pluralize(@suppliers.count, 'supplier') %></p>
-  <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
-  <% if @lot.direct_award_possible? %>
-    <p>Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.</p>
-  <% end %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <h1 class="govuk-heading-xl cmp-page-heading">Lot <%= @lot.number %> suppliers</h1>
+    <p class="govuk-body"><%= contract_value_range_text(@lot.number) %></p>
+    <p class="govuk-body"><%= pluralize(@suppliers.count, 'supplier') %></p>
+    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+    <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
+    <% if @lot.direct_award_possible? %>
+      <p class="govuk-body">Direct award to a single supplier may be an option if your maximum spend is under £1.5 million.</p>
+    <% end %>
+  </div>
 </div>
