--- a/app/assets/stylesheets/components/fm-supplier-record/_fm-supplier-record.scss
+++ b/app/assets/stylesheets/components/fm-supplier-record/_fm-supplier-record.scss
@@ -11,3 +11,7 @@
   margin-bottom: 5px;
   font-weight: $govuk-font-weight-semi-bold;
 }
+
+.fm-supplier-record__services-title {
+  font-weight: $govuk-font-weight-semi-bold;
+}
