--- a/app/views/home/facilities_management.html.erb
+++ b/app/views/home/facilities_management.html.erb
@@ -10,7 +10,7 @@
         <li>find a list of facilities management suppliers</li>
       </ul>
 
-      <%= link_to 'Start now', journey_start_path(journey: FacilitiesManagementJourney.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+      <%= link_to 'Start now', journey_start_path(journey: FacilitiesManagement::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
