Move FacilitiesManagementRegion -> FacilitiesManagement::Region

--- a/app/views/journey/supplier_region.html.erb
+++ b/app/views/journey/supplier_region.html.erb
@@ -11,7 +11,7 @@
         </h1>
         <%= display_error(@journey, :region_codes) %>
       </legend>
-      <% FacilitiesManagementRegion.all.group_by(&:nuts1_code).each do |parent_region_code, regions| %>
+      <% FacilitiesManagement::Region.all.group_by(&:nuts1_code).each do |parent_region_code, regions| %>
         <h3 class="govuk-heading-m"><%= t(".nuts1.#{parent_region_code}") %></h3>
 
         <div class="govuk-form-group">
