Fix styling of XLSX downloads
This relied on the URL containing format=xlsx, but they now use a .xlsx
extension.

--- a/app/assets/stylesheets/components/supplier-record/_supplier-record.scss
+++ b/app/assets/stylesheets/components/supplier-record/_supplier-record.scss
@@ -49,7 +49,7 @@ a.file-download:before {
     content: "";
 }
 
-a.file-download[href*='format=xlsx']:before {
+a.file-download[href*='.xlsx']:before {
     background-color: #007831;
     content: ".XLSX";
 }
