Move ST ActiveRecord models into SupplyTeachers namespace
I couldn't find an easy way to do this step by step, so I'm afraid I've
done it all in one go. Sorry!

--- a/app/views/suppliers/_master_vendor.html.erb
+++ b/app/views/suppliers/_master_vendor.html.erb
@@ -15,7 +15,7 @@
   <% master_vendor.master_vendor_rates_grouped_by_job_type.each do |job_type, rates| %>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-third">
-        <p><%= Rate::JOB_TYPES[job_type] %></p>
+        <p><%= SupplyTeachers::Rate::JOB_TYPES[job_type] %></p>
       </div>
       <div class="govuk-grid-column-two-thirds">
         <div class="govuk-grid-row">
@@ -32,7 +32,7 @@
                   <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
                 </p>
                 <p>
-                  <%= Rate::TERMS[rate.term] %>
+                  <%= SupplyTeachers::Rate::TERMS[rate.term] %>
                 </p>
               </div>
             <% end %>
