Rename teacher_supply_link key to supply_teachers_link
This is more consistent with the naming we've used elsewhere in the
codebase.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <%= link_to t('.teacher_supply_link'), :supply_teachers %>
+          <%= link_to t('.supply_teachers_link'), :supply_teachers %>
         </li>
         <li>
           <%= link_to t('.facilities_management_link'), :facilities_management %>
