Add start page for management consultancy framework
Currently the start button just takes you to a list of *all* suppliers
on the CCS website.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,9 @@
         <li>
           <%= link_to t('.facilities_management_link'), :facilities_management %>
         </li>
+        <li>
+          <%= link_to t('.management_consultancy_link'), :management_consultancy %>
+        </li>
       </ul>
     </div>
   </div>
