--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,6 +16,9 @@
         <li>
           <%= link_to t('.management_consultancy_link'), :management_consultancy %>
         </li>
+        <li>
+          <%= link_to t('.temp_to_perm_calculator_link'), :temp_to_perm_calculator %>
+        </li>
       </ul>
     </div>
   </div>
