--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -16,13 +16,15 @@
 </div>
 <div class="govuk-grid-row ccs-no-print">
   <div class="govuk-grid-column-full">
-    <p class="govuk-body">
+    <p class="govuk-body supplier-record__print-option">
       <a href="javascript:window.print()" class="govuk-link"><%= t('.print') %></a>
     </p>
-    <p class="govuk-body">
-      <%= link_to t('.download'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx)), { class: 'file-download' } %>
+    <p class="govuk-body supplier-record__print-option">
+      <%= link_to t('.download'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx)), { class: 'supplier-record__file-download' } %>
+    </p>
+    <p class="govuk-body supplier-record__print-option">
       <% if link_to_calculator? %>
-      <%= link_to t('.download_with_calculator'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx, calculations: 'yes')), { class: 'file-download' } %>
+      <%= link_to t('.download_with_calculator'), supply_teachers_branches_path(@journey.params.merge(format: :xlsx, calculations: 'yes')), { class: 'supplier-record__file-download' } %>
       <% end %>
     </p>
   </div>
