Update MC start page copy
I took louise's draft copy from here: https://docs.google.com/document/d/1cA5rZRDD5zlSr4jV2eFeYjX9M74cetEohDoO0saNVP8/edit

I've commented out the 'need to know' items that aren't currently implemented. These should be uncommented as we add functionality.

--- a/app/views/management_consultancy/home/index.html.erb
+++ b/app/views/management_consultancy/home/index.html.erb
@@ -1,23 +1,32 @@
 <div class="govuk-body">
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
       <h1 class="govuk-heading-xl">Find management consultancy services</h1>
 
-      <p>Use this service to:</p>
+      <p>Use this service to find a shortlist of suppliers to provide management consultants for:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>find a list of suppliers providing management consultancy services</li>
+        <li>business services - for example, the strategy, structure, management or operations of an organisation</li>
+        <li>procurement, supply chain and commercial services - for example, complex commercial procurement transactions and transactional functional services</li>
+        <li>complex and transformation services - for example, implementing, leading or supporting multi-disciplinary, transformational and large-scale or interdependent programmes</li>
+        <li>strategic services - for example, corporate strategies, appraising business structures, value for money reviews, business performance measurement, product or service design, process and production management</li>
       </ul>
 
       <%= link_to 'Start now', 'https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id=RM6008*', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>To use the service, you will need to have:</p>
+      <p>To use the service, you will need to know:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>TBD</li>
+        <!--
+        <li>the region (or regions) where the work will be carried out</li>
+        -->
+        <li>the lot (or lots) the consultancy services belong to - see the 'Lot Descriptions MCF2 RM6008' document listed <a href='https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm6008'>on the framework agreement</a></li>
+        <!--
+        <li>whether your organisation is prepared to pay expenses for a consultant to travel to where the work is carried out</li>
+        -->
       </ul>
 
     </div>
