Add skeleton of management consultancy journey
Adds boiler plate for the management consultancy journey, with
a lot selection page (lacking copy and design!) and an end step
that links to the existing lists of supplier_by_lot on the ccs
agreement finder website.

These pages are roughly drawn and intended to be thrown away when
the supplier data is in the system and being displayed.

--- a/app/views/management_consultancy/home/index.html.erb
+++ b/app/views/management_consultancy/home/index.html.erb
@@ -13,7 +13,7 @@
         <li>strategic services - for example, corporate strategies, appraising business structures, value for money reviews, business performance measurement, product or service design, process and production management</li>
       </ul>
 
-      <%= link_to 'Start now', 'https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id=RM6008*', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+      <%= link_to 'Start now', journey_start_path(journey: ManagementConsultancy::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
