--- a/app/views/journey/payroll_provider.html.erb
+++ b/app/views/journey/payroll_provider.html.erb
@@ -2,8 +2,9 @@
 
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_field_tag :looking_for, params[:looking_for] %>
-  <%= hidden_field_tag :worker_type, params[:worker_type] %>
+  <% @journey.params.each do |(key, value)| %>
+    <%= hidden_field_tag(key, value) %>
+  <% end %>
   <%= govuk_form_group_with_optional_error(@journey, :payroll_provider) do %>
     <%= govuk_fieldset_with_optional_error(@journey, :payroll_provider) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
