--- a/app/views/journey/supplier_region.html.erb
+++ b/app/views/journey/supplier_region.html.erb
@@ -2,7 +2,9 @@
 
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_field_tag :value_band, params[:value_band] %>
+  <% @journey.params.each do |(key, value)| %>
+    <%= hidden_field_tag key, value %>
+  <% end %>
   <%= govuk_form_group_with_optional_error(@journey, :region_codes) do %>
     <%= govuk_fieldset_with_optional_error(@journey, :region_codes) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
