--- a/app/views/management_consultancy/suppliers/index.html.erb
+++ b/app/views/management_consultancy/suppliers/index.html.erb
@@ -1,10 +1,4 @@
 <%
-links = {
-  'lot1' => 'https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id="RM6008%3A1"',
-  'lot2' => 'https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id="RM6008%3A2"',
-  'lot3' => 'https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id="RM6008%3A3"',
-  'lot4' => 'https://ccs-agreements.cabinetoffice.gov.uk/suppliers?sm_field_contract_id="RM6008%3A4"',
-}
 titles = {
   'lot1' => 'Lot 1 - business services',
   'lot2' => 'Lot 2 - procurement, supply chain and commercial services',
@@ -14,4 +8,15 @@ titles = {
 %>
 <h1>Management Consultancy Framework</h1>
 <h2><%= titles[params[:lot]] %></h2>
-<p><a href="<%= links[params[:lot]] %>">View a list of suppliers</a></p>
+
+<p>
+  <%= pluralize(@suppliers.count, 'supplier') %>
+</p>
+
+<ul>
+  <% @suppliers.each do |supplier| %>
+    <li>
+      <%= supplier.name %>
+    </li>
+  <% end %>
+</ul>
