--- a/app/views/management_consultancy/suppliers/index.html.erb
+++ b/app/views/management_consultancy/suppliers/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Management Consultancy Framework</h1>
-<h2><%= lot_title(@lot) %></h2>
+<h2><%= @lot.full_description %></h2>
 
 <p>
   <%= pluralize(@suppliers.count, 'supplier') %>
