Add basic styling to MC suppliers index page & extract partial

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -28,6 +28,7 @@
 @import "fm-supplier-record/fm-supplier-record";
 @import "label/label";
 @import "master-vendor-record/master-vendor-record";
+@import "mc-supplier-record/mc-supplier-record";
 @import "phase-banner/phase-banner";
 @import "sidebar/sidebar";
 @import "supplier-record/supplier-record";
