--- a/app/assets/stylesheets/components/mc-supplier-record/_mc-supplier-record.scss
+++ b/app/assets/stylesheets/components/mc-supplier-record/_mc-supplier-record.scss
@@ -6,3 +6,7 @@
   margin-bottom: 5px;
   font-weight: $govuk-font-weight-semi-bold;
 }
+
+.mc-supplier-record__services-title {
+  font-weight: $govuk-font-weight-semi-bold;
+}
