Improve typography for supply teachers

--- a/app/assets/stylesheets/components/master-vendor-record/_master-vendor-record.scss
+++ b/app/assets/stylesheets/components/master-vendor-record/_master-vendor-record.scss
@@ -3,6 +3,6 @@
 }
 
 .master-vendor-record__markup-rate {
-  font-weight: 600;
+  font-weight: $govuk-font-weight-semi-bold;
   margin-bottom: 0;
 }
