--- a/app/views/journey/_managed_service_providers_explanation.html.erb
+++ b/app/views/journey/_managed_service_providers_explanation.html.erb
@@ -2,12 +2,15 @@
   <%= t('.header') %>
 </h2>
 <p class="govuk-body"><%= t('.introduction') %></p>
-<h4 class="govuk-heading-s"><%= t('.option1_header') %></h4>
+<h3 class="govuk-heading-s"><%= t('.option1_header') %></h3>
 <p class="govuk-body">
-  <%= t('.option1_body_html') %>
+  <%= t('.option1_body_html1') %>
+</p>
+<p class="govuk-body">
+  <%= t('.option1_body_html2') %>
 </p>
 <p class="govuk-body"><%= t('.option_separator') %></p>
-<h4 class="govuk-heading-s"><%= t('.option2_header') %></h4>
+<h3 class="govuk-heading-s"><%= t('.option2_header') %></h3>
 <p class="govuk-body">
   <%= t('.option2_body_html') %>
 </p>
