--- a/app/views/journey/agency_payroll.html.erb
+++ b/app/views/journey/agency_payroll.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <% @journey.params.each do |(key, value)| %>
-    <%= hidden_field_tag key, value %>
+    <%= hidden_field_tag(key, value) unless ['postcode', 'job_type', 'term'].include?(key) %>
   <% end %>
   <%= govuk_form_group_with_optional_error(@journey, :location) do %>
     <label class="govuk-label govuk-label--m" for="postcode">
