--- a/app/views/journey/school_postcode.html.erb
+++ b/app/views/journey/school_postcode.html.erb
@@ -3,7 +3,7 @@
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <% @journey.params.each do |(key, value)| %>
-    <%= hidden_field_tag key, value %>
+    <%= hidden_field_tag(key, value) unless key == 'postcode' %>
   <% end %>
   <%= govuk_form_group_with_optional_error(@journey, :location) do %>
     <h1 class="govuk-label-wrapper">
