--- a/app/views/facilities_management/home/index.html.erb
+++ b/app/views/facilities_management/home/index.html.erb
@@ -2,22 +2,23 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Find a facilities management supplier</h1>
+      <h1 class="govuk-heading-xl">Find facilities management services suppliers</h1>
 
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>find a list of facilities management suppliers</li>
+        <li>find facilities management services suppliers for one place or multiple locations</li>
       </ul>
 
       <%= link_to 'Start now', journey_start_path(journey: FacilitiesManagement::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
       <h2 class="govuk-heading-m">Before you start</h2>
 
-      <p>To use the service, you will need to have:</p>
+      <p>To use the service, you will need to know:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>an idea of your current or proposed budget</li>
+        <li>the region where the services need to be delivered, including if this is at more than one location</li>
+        <li>the value of your current contract - if you don’t have a current contract, or are changing what’s included, you’ll need to base your selection on the estimated total contract value</li>
       </ul>
 
     </div>
