--- a/app/views/journey/agency_payroll.html.erb
+++ b/app/views/journey/agency_payroll.html.erb
@@ -2,9 +2,7 @@
 
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
-  <% @journey.params.each do |(key, value)| %>
-    <%= hidden_field_tag(key, value) unless ['postcode', 'job_type', 'term'].include?(key) %>
-  <% end %>
+  <%= hidden_fields_for_previous_steps_and_responses(@journey, 'postcode', 'job_type', 'term') %>
   <%= govuk_form_group_with_optional_error(@journey, :location) do %>
     <label class="govuk-label govuk-label--m" for="postcode">
       <%= t('.postcode_question') %>
