--- a/app/views/journey/worker_type.html.erb
+++ b/app/views/journey/worker_type.html.erb
@@ -2,9 +2,7 @@
 
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
-  <% @journey.params.each do |(key, value)| %>
-    <%= hidden_field_tag(key, value) unless key == 'worker_type' %>
-  <% end %>
+  <%= hidden_fields_for_previous_steps_and_responses(@journey, 'worker_type') %>
   <%= govuk_form_group_with_optional_error(@journey, :worker_type) do %>
     <%= govuk_fieldset_with_optional_error(@journey, :worker_type) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
