--- a/app/views/temp_to_perm_calculator/home/fee.html.erb
+++ b/app/views/temp_to_perm_calculator/home/fee.html.erb
@@ -6,7 +6,13 @@
       </h1>
       <div class="govuk-panel__body">
         <%= t('.panel_body') %>
-        <br><strong><%= number_to_currency(@fee, unit: '£') %></strong>
+        <br><strong><%= number_to_currency(@calculator.fee, unit: '£') %></strong>
       </div>
     </div>
+
+    <div>
+      <h2>Explanation</h2>
+      <p>This calculation is based on a daily supplier's fee of <%= number_to_currency(@calculator.daily_supplier_fee, unit: '£') %>. This fee is the supplier's proportion of the <%= number_to_percentage(@calculator.markup_rate * 100, precision: 1) %> mark-up on a <%= number_to_currency(@calculator.day_rate, unit: '£') %> daily rate. There were <%= @calculator.working_days %> working days between the date the worker started their contract <%= @calculator.contract_start_date.to_formatted_s(:long) %> and the date you intend to hire them, <%= @calculator.hire_date.to_formatted_s(:long) %>. The worker you wish to hire works <%= @calculator.days_per_week %> days per week and the total fee has been calculated on a pro-rata basis.</p>
+    </div>
   </div>
+</div>
