Introduce Journey#previous_questions_and_answers
So that we can avoid having to explicitly list the fields to ignore.

I've made Journey#params a HashWithIndifferentAccess so that I can
slightly simplify the implementation of
`previous_questions_and_answers`. The `params` contain keys as strings
while the `#attributes` method returns an array of symbols.

--- a/app/views/journey/day_rate.html.erb
+++ b/app/views/journey/day_rate.html.erb
@@ -2,7 +2,7 @@
 
 <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_fields_for_previous_steps_and_responses(@journey, 'day_rate') %>
+  <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
   <%= govuk_form_group_with_optional_error(@journey, :day_rate) do %>
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
       <h1 class="govuk-fieldset__heading">
